cloud/nextcloud/notifications/ingress-wildcard/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: push-notifications
spec:
  ingressClassName: nginx
  tls:
  - secretName: AUTOMATIC_REPLACE
  rules:
  - host: nextcloud-notifications.AUTOMATIC_REPLACE.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: push-notifications
            port:
              name: notify
